# rust-server

./: Cargo.toml  readme.md
src/: call_api.rs  get_from_db.rs  main.rs  math_func.rs
