[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.6.2", features = ["runtime-actix-native-tls" , "postgres"]}
actix-web = "4.2.1"
futures = "0.3.25"
reqwest = "0.11.13"